--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/ui": "^0.3.0",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "tailwindcss": "^1.4.6",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
